@@ -1,7 +1,11 @@
 from unittest2.test.support import EqualityMixin, LoggingResult
 
+import gc
 import sys
+import weakref
+
 import unittest2
+import unittest2 as unittest
 
 class Test(object):
     class Foo(unittest2.TestCase):
@@ -294,6 +298,46 @@ class Test_TestSuite(unittest2.TestCase, EqualityMixin):
         # when the bug is fixed this line will not crash
         suite.run(unittest2.TestResult())
 
+    def test_remove_test_at_index(self):
+        suite = unittest.TestSuite()
+
+        suite._tests = [1, 2, 3]
+        suite._removeTestAtIndex(1)
+
+        self.assertEqual([1, None, 3], suite._tests)
+
+    def test_remove_test_at_index_not_indexable(self):
+        suite = unittest.TestSuite()
+        suite._tests = None
+
+        # if _removeAtIndex raises for noniterables this next line will break
+        suite._removeTestAtIndex(2)
+
+    def assert_garbage_collect_test_after_run(self, TestSuiteClass):
+
+        class Foo(unittest.TestCase):
+            def test_nothing(self):
+                pass
+
+        test = Foo('test_nothing')
+        wref = weakref.ref(test)
+
+        suite = TestSuiteClass([wref()])
+        suite.run(unittest.TestResult())
+
+        del test
+
+        # for the benefit of non-reference counting implementations
+        gc.collect()
+
+        self.assertEqual(suite._tests, [None])
+        self.assertIsNone(wref())
+
+    def test_garbage_collect_test_after_run_BaseTestSuite(self):
+        self.assert_garbage_collect_test_after_run(unittest.BaseTestSuite)
+
+    def test_garbage_collect_test_after_run_TestSuite(self):
+        self.assert_garbage_collect_test_after_run(unittest.TestSuite)
 
     def test_basetestsuite(self):
         class Test(unittest2.TestCase):
@@ -349,7 +393,6 @@ class Test_TestSuite(unittest2.TestCase, EqualityMixin):
         wrapper.addTest(suite)
         wrapper(unittest2.TestResult())
         self.assertTrue(suite.called)
-
 
 if __name__ == '__main__':
     unittest2.main()
